                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 09-10-2006 fixed: filenames on fat memory units wich where very long (required >6 vfat entries) would chop of last part in some cases.
 - 09-10-2006 fixed: fat memory units with a sector size different from 512 would not load, now 512, 1024, 2048 and 4096 should be supported.
 - 07-10-2006 updated: Russian language file (Thnx to que_)
 - 07-10-2006 updated: Portuguese (Brazil) language file (Thnx to mvbm)
 - 07-10-2006 updated: Hungarian language file (Thnx to sigismund)
 - 07-10-2006 updated: Hebrew language file (Thnx to ookladek)
 - 07-10-2006 updated: Dutch language file (Thnx to MrNice)
 - 06-10-2006 fixed: Setting of viewport (for cropping scrolling text etc.) was not rotated correctly.  We now use the rectangle that contains all the rotated coordinates.
 - 06-10-2006 fixed: http urls pointing to nonexisting files would lockup on some servers due to them not returning an error
 - 06-10-2006 fixed: ftp browsing with files/directory with non valid html url names, would fail.
 - 05-10-2006 fixed: Changed RSS speed to a multiple of 0.5 pixels/frame for improved smoothness.
 - 05-10-2006 fixed: [ 1571200 ] Arial.ttf subtitles not using subtitle position.
 - 05-10-2006 fixed: Potential RSS control crash when removing the control while it's updating.
 - 04-10-2006 changed: Z: is erased on boot, due to many issues if it was full.
 - 04-10-2006 fixed: Seekbar, Volume bar etc. would be unloaded when exiting from fullscreen video, causing them to vanish.
 - 04-10-2006 fixed: Reloading skin while in My Music Songs would cause the progress dialog to show endlessly.