@@ -1,8 +1,8 @@
 #pragma once
 #include "GUIWindowMusicBase.h"
+#include "ThumbLoader.h"
 
-
-class CGUIWindowMusicNav : public CGUIWindowMusicBase
+class CGUIWindowMusicNav : public CGUIWindowMusicBase, public IBackgroundLoaderObserver
 {
 public:
 
@@ -13,6 +13,7 @@ public:
   virtual void Render();
 
 protected:
+  virtual void OnItemLoaded(CFileItem* pItem) {};
   // override base class methods
   virtual bool GetDirectory(const CStdString &strDirectory, CFileItemList &items);
   virtual void UpdateButtons();
@@ -28,4 +29,6 @@ protected:
   VECSHARES m_shares;
 
   bool m_bDisplayEmptyDatabaseMessage;  ///< If true we display a message informing the user to switch back to the Files view.
+
+  CMusicThumbLoader m_thumbLoader;      ///< used for the loading of thumbs in the special://musicplaylist folder
 };
